Changed shadows to avoid blurriness on Safari

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ body {
 
 #title-container {
 	display: block;
-	filter: drop-shadow(3px 3px 1px #00000040);
+	text-shadow: 3px 3px 2px #00000040;
 	margin: auto;
 	width: fit-content;
 	text-align: start;
@@ -72,6 +72,7 @@ body {
 	height: 1.06em;
 	vertical-align: bottom;
 	margin-left: 0.02em;
+	filter: drop-shadow(3px 3px 1px #00000040);
 }
 #title {
 	font-size: 3.375em;
